--- a/models/staging/jaffle_shop/_stg_jaffle_shop.yml
+++ b/models/staging/jaffle_shop/_stg_jaffle_shop.yml
@@ -1,13 +1,27 @@
 models:
-  - name: stg_jaffle__shop_customers
+  - name: stg_jaffle_shop__customers
     columns:
       - name: customer_id
         data_tests:
           - unique
           - not_null
-  - name: stg_jaffle__shop_orders
+  - name: stg_jaffle_shop__orders
     columns:
       - name: order_id
         data_tests:
           - not_null
           - unique
+      - name: status
+        data_tests:
+          - accepted_values:
+              values:
+                - completed
+                - shipped
+                - placed
+                - return_pending
+                - returned
+      - name: customer_id
+        data_tests:
+          - relationships:
+              field: customer_id
+              to: ref('stg_jaffle_shop__customers')
