--- a/models/staging/jaffle_shop/_src_jaffle_shop.yml
+++ b/models/staging/jaffle_shop/_src_jaffle_shop.yml
@@ -2,19 +2,21 @@ sources:
   - name: jaffle_shop
     database: raw
     schema: jaffle_shop
-    config:
-      freshness: 
-        error_after:
-          count: 2
-          period: day
-        warn_after:
-          count: 1
-          period: day
-      loaded_at_field: _etl_loaded_at
     tables:
       - name: customers
-        freshness: null
+        columns:
+          - name: id
+            description: primary key
+            data_tests:
+              - unique
+              - not_null        
       - name: orders
-
-        
-        
+        config:
+          freshness:
+            warn_after:
+              count: 12
+              period: hour
+            error_after:
+              count: 1
+              period: day
+          loaded_at_field: _etl_loaded_at
