--- a/models/staging/jaffle_shop/_stg_jaffle_shop.yml
+++ b/models/staging/jaffle_shop/_stg_jaffle_shop.yml
@@ -5,6 +5,12 @@ models:
         data_tests:
           - unique
           - not_null
+      - name: first_name
+        data_tests:
+          - not_null
+      - name: last_name
+        data_tests:
+          - not_null
   - name: stg_jaffle_shop__orders
     columns:
       - name: order_id
@@ -25,3 +31,9 @@ models:
           - relationships:
               field: customer_id
               to: ref('stg_jaffle_shop__customers')
+      - name: order_date
+        data_tests:
+          - not_null
+      - name: _etl_loaded_at
+        data_tests:
+          - not_null
