--- a/models/staging/jaffle_shop/_stg_jaffle_shop.yml
+++ b/models/staging/jaffle_shop/_stg_jaffle_shop.yml
@@ -1,7 +1,9 @@
 models:
   - name: stg_jaffle_shop__customers
+    description: The grain of this table is one unique customer per row.
     columns:
       - name: customer_id
+        description: primary key for the order table.
         data_tests:
           - unique
           - not_null
@@ -12,12 +14,15 @@ models:
         data_tests:
           - not_null
   - name: stg_jaffle_shop__orders
+    description: One order per row.
     columns:
       - name: order_id
+        description: Primary Key for the order table.
         data_tests:
           - not_null
           - unique
       - name: status
+        description: "{{ doc('order_status') }}"
         data_tests:
           - accepted_values:
               values:
